# project-5

./: CMakeLists.txt  main.cpp  stop_program.sh
actors/: bee.cpp  bee.h  winnie_the_pooh.cpp  winnie_the_pooh.h
docs/: Report.md
objects/: beehive.cpp  beehive.h
utils/: context.cpp  context.h  messages.h  settings.h  signal_handler.h  utils.h
